--- a/src/app/layouts/services/services.component.html
+++ b/src/app/layouts/services/services.component.html
@@ -1,24 +1,24 @@
 <section>
   <div class="container">
     <div class="services-title">
-      <h2>What I Do</h2>
-      <p>I bring expertise in various key areas:</p>
+      <h2>Services</h2>
+      <p>Here are the specialized services I offer:</p>
     </div>
     <div class="services">
       <div class="services-card" appFade="left">
-        <h3 class="services-card-subtitle">Data Engineering</h3>
-        <h3 class="services-card-title">Database Management & Data Processing</h3>
-        <p>I excel in crafting and managing databases, processing data efficiently using tools like SQL, BigQuery, SQL Server, and AirByte for data integration.</p>
+        <h3 class="services-card-subtitle">Data Platform Setup</h3>
+        <h3 class="services-card-title">End-to-End Implementation</h3>
+        <p>I specialize in setting up comprehensive data platforms, encompassing cloud infrastructure creation, establishing robust data pipelines, and implementing CI/CD pipelines. This ensures sustainability, maintainability, and cost-effectiveness of the data platform.</p>
       </div>
       <div class="services-card" appFade="left" [delay]="200">
-        <h3 class="services-card-subtitle">Cloud Technologies</h3>
-        <h3 class="services-card-title">Cloud Solutions & DevOps</h3>
-        <p>I specialize in architecting cloud solutions, leveraging Azure, GCP, and implementing DevOps practices with tools like Azure DevOps, GitLab CI/CD, Docker, Kubernetes, and Azure Functions.</p>
+        <h3 class="services-card-subtitle">Sector-Focused Solutions</h3>
+        <h3 class="services-card-title">Industry-Tailored Expertise</h3>
+        <p>With experience across various sectors like asset management, HR, and e-commerce, I offer sector-focused data solutions. Understanding diverse industry needs helps in customizing data platforms to align with specific business expectations and industry standards.</p>
       </div>
       <div class="services-card" appFade="left" [delay]="400">
-        <h4 class="services-card-subtitle">Software Development</h4>
-        <h3 class="services-card-title">Application Development & Integration</h3>
-        <p>I develop robust applications for various platforms, integrating systems using Python, Flask, PySpark, Pandas, PyQt, and Temporal.</p>
+        <h4 class="services-card-subtitle">Entrepreneurial Insights</h4>
+        <h3 class="services-card-title">Customer-Centric Approach</h3>
+        <p>My entrepreneurial background equips me with insights into customer needs. I ensure data platforms are aligned with customer expectations, optimizing them to derive maximum business value and insights, meeting both functional and strategic objectives.</p>
       </div>
     </div>
   </div>
