--- a/src/app/layouts/services/services.component.html
+++ b/src/app/layouts/services/services.component.html
@@ -1,24 +1,24 @@
 <section>
   <div class="container">
     <div class="services-title">
-      <h2>Services</h2>
-      <p>Here are the specialized services I offer:</p>
+      <h2>Our Services</h2>
+      <p>Explore our specialized offerings tailored to your data needs:</p>
     </div>
     <div class="services">
       <div class="services-card" appFade="left">
-        <h3 class="services-card-subtitle">Data Platform Setup</h3>
-        <h3 class="services-card-title">End-to-End Implementation</h3>
-        <p>I specialize in setting up comprehensive data platforms, encompassing cloud infrastructure creation, establishing robust data pipelines, and implementing CI/CD pipelines. This ensures sustainability, maintainability, and cost-effectiveness of the data platform.</p>
+        <h3 class="services-card-subtitle">Data Engineering & Pipelines</h3>
+        <h3 class="services-card-title">Robust Data Platforms</h3>
+        <p>As an experienced Data Engineer, I specialize in architecting and implementing robust data platforms. From designing cloud infrastructure to orchestrating seamless data pipelines, I ensure efficient data processing and integration across industries like asset management, HR, and e-commerce.</p>
       </div>
       <div class="services-card" appFade="left" [delay]="200">
-        <h3 class="services-card-subtitle">Sector-Focused Solutions</h3>
-        <h3 class="services-card-title">Industry-Tailored Expertise</h3>
-        <p>With experience across various sectors like asset management, HR, and e-commerce, I offer sector-focused data solutions. Understanding diverse industry needs helps in customizing data platforms to align with specific business expectations and industry standards.</p>
+        <h3 class="services-card-subtitle">DevOps & CI/CD Pipelines</h3>
+        <h3 class="services-card-title">Efficient Operations</h3>
+        <p>My background in DevOps practices enables me to establish CI/CD pipelines, ensuring reliability and scalability for data platforms. I streamline operations, minimizing cloud-related costs while maximizing efficiency and maintaining top-notch performance.</p>
       </div>
       <div class="services-card" appFade="left" [delay]="400">
-        <h4 class="services-card-subtitle">Entrepreneurial Insights</h4>
-        <h3 class="services-card-title">Customer-Centric Approach</h3>
-        <p>My entrepreneurial background equips me with insights into customer needs. I ensure data platforms are aligned with customer expectations, optimizing them to derive maximum business value and insights, meeting both functional and strategic objectives.</p>
+        <h3 class="services-card-subtitle">Cloud Infrastructure & Optimization</h3>
+        <h3 class="services-card-title">Cost-effective Solutions</h3>
+        <p>Specializing in crafting and optimizing tailored cloud infrastructure, I align the setup with business expectations across diverse sectors. Minimizing cloud costs without compromising performance, I enable businesses to leverage their data effectively within a cost-effective and business-oriented cloud environment.</p>
       </div>
     </div>
   </div>
