--- a/src/app/layouts/services/services.component.html
+++ b/src/app/layouts/services/services.component.html
@@ -1,8 +1,8 @@
 <section>
   <div class="container">
     <div class="services-title">
-      <h2>Our Services</h2>
-      <p>Explore our specialized offerings tailored to your data needs:</p>
+      <h2>My Services</h2>
+      <p>Explore My Specialized Data Services for Your Unique Needs</p>
     </div>
     <div class="services">
       <div class="services-card" appFade="left">
