--- a/src/app/layouts/landing/landing.component.html
+++ b/src/app/layouts/landing/landing.component.html
@@ -18,7 +18,7 @@
             </a>
           </li> -->
           <li>
-            <a href="https://linkedin.com/abdellah-wadjinny" target="_blank" rel="noopener noreferrer">
+            <a href="https://linkedin.com/in/abdellah-wadjinny" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
                   <path
