--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -245,12 +245,10 @@
 
       <!-- Skills Section -->
 
-  <div class="technical-skills">
+  <div class="skills">
     <h3 class="skills-title">Programming<br>Languages<br>& Frameworks</h3>
     <ul class="skill-list">
         <li>Python</li>
-        <li>HTML/CSS</li>
-        <li>Javascript</li>
         <li>Flask</li>
         <li>PySpark</li>
         <li>Pandas</li>
@@ -258,44 +256,36 @@
         <li>Temporal</li>   
     </ul>
   </div>
-  <div class="soft-skills">
+  <div class="skills">
     <h3 class="skills-title">Database<br>&<br>Data Tools</h3>
     <ul class="skill-list">
-      <li>SQL</li>
-      <li>BigQuery</li>
       <li>SQL Server</li>
       <li>AirByte</li>
       <li>DBT (Data Build Tool)</li>
       <li>Kedro</li>
-      <li>GCP BigQuery</li>
-      <li>Azure Data Factory</li>
-      <li>Azure Databricks</li>
+      <li>Google Cloud Platform</li>
+      <li>BigQuery</li>
+      <li>Databricks</li>
     </ul>
     
   </div>
 
-  <div class="soft-skills">
-    <h3 class="skills-title">Coud Services<br>& Development<br>Tools</h3>
+  <div class="skills">
+    <h3 class="skills-title">Coud Services<br>& DevOps<br>Tools</h3>
     <ul class="skill-list">
-      <li>Azure</li>
-      <li>Google Cloud Platform</li>
-      <li>Microsoft Azure DevOps</li>
-      <li>GitLab CI/CD</li>
-      <li>Github Actions</li>
       <li>Docker</li>
       <li>Kubernetes</li>
       <li>Azure Functions</li>
       <li>Azure Web Apps</li>
       <li>Azure Storage</li>
-      <li>RESTful APIs</li>
+      <li>Azure Data Factory</li>
+      <li>Azure DevOps</li>
+      <li>GitLab CI/CD</li>
+      <li>Github Actions</li>
     </ul>
     
   </div>
 </div>
-
-
-
-
 
 
     </div>
