--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -7,7 +7,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Founder</h3>
           <span class="experience-card-info-date">Mailebo | Remote</span>
-          <span class="experience-card-info-date">Aug 2022 - Present</span>
+          <span class="experience-card-info-date">August 2022 - Present</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -31,7 +31,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Enginner</h3>
           <span class="experience-card-info-date">Singulier | Remote</span>
-          <span class="experience-card-info-date">May 15, 2023 - Present</span>
+          <span class="experience-card-info-date">May 2023 - Present</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -55,7 +55,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer</h3>
           <span class="experience-card-info-date">Singulier | Remote</span>
-          <span class="experience-card-info-date">Feb 13, 2023 - Apr 21, 2023</span>
+          <span class="experience-card-info-date">February 2023 - April 2023</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -79,6 +79,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer</h3>
           <span class="experience-card-info-date">Singulier | Remote</span>
+          <span class="experience-card-info-date">January 2023</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -100,7 +101,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer</h3>
           <span class="experience-card-info-date">Singulier | Remote</span>
-          <span class="experience-card-info-date">20/12/2021 - 23/12/2022</span>
+          <span class="experience-card-info-date">December 2021 - December 2022</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -123,7 +124,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer</h3>
           <span class="experience-card-info-date">Singulier | Remote</span>
-          <span class="experience-card-info-date">01/09/2021 - 17/12/2021</span>
+          <span class="experience-card-info-date">September 2021 - December 2021</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -146,7 +147,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer/Analyst</h3>
           <span class="experience-card-info-date">LYXOR Asset Management | Full Time</span>
-          <span class="experience-card-info-date">Nov 1, 2019 - June 1, 2021</span>
+          <span class="experience-card-info-date">November 2019 - June 2021</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
@@ -167,7 +168,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Scientist Apprentice</h3>
           <span class="experience-card-info-date">Enedis | Location</span>
-          <span class="experience-card-info-date">Sep 2018 - Sep 2019</span>
+          <span class="experience-card-info-date">September 2018 - September 2019</span>
           <div>
             <span class="experience-card-info-badge">Apprenticeship</span>
           </div>
@@ -189,7 +190,7 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Python Developer Intern</h3>
           <span class="experience-card-info-date">CEA | Location</span>
-          <span class="experience-card-info-date">May 2018 - Aug 2018</span>
+          <span class="experience-card-info-date">May 2018 - August 2018</span>
           <div>
             <span class="experience-card-info-badge">Internship</span>
           </div>
