--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -272,7 +272,7 @@
   </div>
 
   <div class="skills">
-    <h3 class="skills-title">Coud Services<br>& DevOps<br>Tools</h3>
+    <h3 class="skills-title">Coud Services<br>& DevOps Tools</h3>
     <ul class="skill-list">
       <li>Docker</li>
       <li>Kubernetes</li>
