--- a/src/app/layouts/contacts/contacts.component.html
+++ b/src/app/layouts/contacts/contacts.component.html
@@ -35,7 +35,11 @@
         </ul>
       </div>
       <div class="contacts-form" appFade="left" [delay]="200">
-        <h3>Say Something</h3>
+        <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/awadjinny/15-phone-call" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
+        <!-- <h3>Say Something</h3>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <input class="contacts-form-row" type="text" placeholder="Enter your name" formControlName="name">
           <span class="contacts-error-label" *ngIf="isFieldValid('name')">Name is required</span>
@@ -47,7 +51,7 @@
           <div>
             <button type="submit" class="btn">Send Message</button>
           </div>
-        </form>
+        </form> -->
       </div>
     </div>
   </div>
