--- a/src/app/layouts/contacts/contacts.component.html
+++ b/src/app/layouts/contacts/contacts.component.html
@@ -37,7 +37,8 @@
       <div> 
         <!-- class="contacts-form" appFade="left" [delay]="200"> -->
         <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget"></div>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/awadjinny/15-phone-call" style="min-width:320px;height:700px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         <!-- Calendly inline widget end -->
         
         <!-- <h3>Say Something</h3>
