(debug) add calendly to the contacts form class

--- a/src/app/layouts/contacts/contacts.component.html
+++ b/src/app/layouts/contacts/contacts.component.html
@@ -34,9 +34,10 @@
           </li>
         </ul>
       </div>
-      <div class="contacts-form"   data-url="https://calendly.com/awadjinny/15-phone-call"  appFade="left" [delay]="200"> 
+      <div> 
+        <!-- class="contacts-form" appFade="left" [delay]="200"> -->
         <!-- Calendly inline widget begin -->
-        <!-- <div class="calendly-inline-widget" data-url="https://calendly.com/awadjinny/15-phone-call" ></div> -->
+        <div  data-url="https://calendly.com/awadjinny/15-phone-call" ></div>
         <!-- Calendly inline widget end -->
         
         <!-- <h3>Say Something</h3>
