--- a/src/app/layouts/about/about.component.html
+++ b/src/app/layouts/about/about.component.html
@@ -12,7 +12,7 @@
         </a>
       </div>
       <div class="about-img" appFade="up">
-        <img ngSrc="assets/img/about.jpg" alt="Kate Moore" width="1200" height="800">
+        <img ngSrc="assets/img/about.jpg" alt="Abdellah WADJINNY" width="1200" height="800">
       </div>
     </div>
   </div>
