add get in touch

--- a/src/app/layouts/contacts/contacts.component.html
+++ b/src/app/layouts/contacts/contacts.component.html
@@ -34,26 +34,8 @@
           </li>
         </ul>
       </div>
-      <div> 
-        <!-- class="contacts-form" appFade="left" [delay]="200"> -->
-        <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget" data-url="https://calendly.com/awadjinny/15-phone-call" style="min-width:320px;height:700px;"></div>
-        <!-- <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script> -->
-        <!-- Calendly inline widget end -->
-        
-        <!-- <h3>Say Something</h3>
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-          <input class="contacts-form-row" type="text" placeholder="Enter your name" formControlName="name">
-          <span class="contacts-error-label" *ngIf="isFieldValid('name')">Name is required</span>
-          <input class="contacts-form-row" type="email" placeholder="Enter your email" formControlName="email">
-          <span class="contacts-error-label" *ngIf="isFieldValid('email')">Email is invalid</span>
-          <textarea class="contacts-form-row" rows="4" placeholder="Enter your message"
-            formControlName="message"></textarea>
-          <span class="contacts-error-label" *ngIf="isFieldValid('message')">Message is required</span>
-          <div>
-            <button type="submit" class="btn">Send Message</button>
-          </div>
-        </form> -->
+      <div class="get-in-touch-img" appFade="up"> 
+        <img src="/assets/img/get-in-touch.svg" alt="Get in touch" width="1200" height="300">
       </div>
     </div>
   </div>
