--- a/src/app/components/theme-switcher/theme-switcher.component.html
+++ b/src/app/components/theme-switcher/theme-switcher.component.html
@@ -5,16 +5,21 @@
     </svg>
     <span class="menu-toggler-text">{{togglerLabel}}</span>
   </button>
-  <div class="menu" *ngIf="isMenuVisible">
+  @if (isMenuVisible) {
+  <div class="menu">
     <ul>
-      <li *ngFor="let val of themeOptions">
-        <button class="menu-item" (click)="updateTheme(val.name)" [ngClass]="{'active':selectedOption.name === val.name}">
+      @for (val of themeOptions; track val) {
+      <li>
+        <button class="menu-item" (click)="updateTheme(val.name)"
+          [ngClass]="{'active':selectedOption.name === val.name}">
           <svg height="1em" viewBox="0 0 512 512">
             <path [attr.d]="val.icon"></path>
           </svg>
           {{val.name | titlecase }}
         </button>
       </li>
+      }
     </ul>
   </div>
+  }
 </div>
