--- a/src/app/layouts/contacts/contacts.component.html
+++ b/src/app/layouts/contacts/contacts.component.html
@@ -21,7 +21,7 @@
                   d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
               </svg>
             </span>
-            <span class="contacts-info-icon-desc">support@domain.com</span>
+            <span class="contacts-info-icon-desc">support&#64;domain.com</span>
           </li>
           <li>
             <span class="contacts-info-icon">
@@ -38,12 +38,18 @@
         <h3>Say Something</h3>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <input class="contacts-form-row" type="text" placeholder="Enter your name" formControlName="name">
-          <span class="contacts-error-label" *ngIf="isFieldValid('name')">Name is required</span>
+          @if (isFieldValid('name')){
+          <span class="contacts-error-label">Name is required</span>
+          }
           <input class="contacts-form-row" type="email" placeholder="Enter your email" formControlName="email">
-          <span class="contacts-error-label" *ngIf="isFieldValid('email')">Email is invalid</span>
+          @if (isFieldValid('email')){
+          <span class="contacts-error-label">Email is invalid</span>
+          }
           <textarea class="contacts-form-row" rows="4" placeholder="Enter your message"
             formControlName="message"></textarea>
-          <span class="contacts-error-label" *ngIf="isFieldValid('message')">Message is required</span>
+          @if (isFieldValid('message')){
+          <span class="contacts-error-label">Message is required</span>
+          }
           <div>
             <button type="submit" class="btn">Send Message</button>
           </div>
