Add carrefour experience

--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -2,6 +2,29 @@
   <div class="container">
     <h2>Experience</h2>
     <div class="experience">
+      <!-- Client: Carrefour -->
+      <div class="experience-card" appFade="up" [delay]="50">
+          <div class="experience-card-info">
+              <h3 class="experience-card-info-title">Senior Data Engineer</h3>
+              <span class="experience-card-info-date">Carrefour</span>
+              <span class="experience-card-info-date">June 2024 - Present</span>
+              <div>
+                  <span class="experience-card-info-badge">Full Time</span>
+              </div>
+          </div>
+          <div class="experience-card-details">
+              <h3 class="experience-card-details-title">Carrefour</h3>
+              <p>Secured the price flow from its definition by business teams to application at the store checkout, navigating through various pricing applications and adhering to a complex set of business rules. Key responsibilities and tasks included:</p>
+              <ul>
+                  <li>Implementing optimized data pipelines using an in-house ETL similar to DBT to process multiple terabytes of data while reducing cloud costs.</li>
+                  <li>Developing a Python tool to enforce all Carrefour business rules, enhancing control and reliability of applied prices.</li>
+                  <li>Building optimized and automated reporting for real-time analysis and monitoring of pricing data.</li>
+                  <li>Establishing data quality tests and processes.</li>
+              </ul>
+              <p>Technologies: Python, BigQuery, SQL, Looker, Docker, GCP, Terraform, GitLab CI/CD.</p>
+          </div>
+      </div>
+
       <!-- Client: Univet -->
       <div class="experience-card" appFade="up" [delay]="50">
         <div class="experience-card-info">
