--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -6,7 +6,7 @@
       <div class="experience-card" appFade="up" [delay]="50">
           <div class="experience-card-info">
               <h3 class="experience-card-info-title">Senior Data Engineer</h3>
-              <span class="experience-card-info-date">Carrefour</span>
+              <span class="experience-card-info-date">Carrefour | Remote</span>
               <span class="experience-card-info-date">June 2024 - Present</span>
               <div>
                   <span class="experience-card-info-badge">Full Time</span>
@@ -124,7 +124,7 @@
       <div class="experience-card" appFade="up" [delay]="300">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer/Analyst</h3>
-          <span class="experience-card-info-date">LYXOR Asset Management | Full Time</span>
+          <span class="experience-card-info-date">LYXOR Asset Management | Paris/span>
           <span class="experience-card-info-date">September 2019 - June 2021</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
@@ -132,7 +132,7 @@
         </div>
         <div class="experience-card-details">
           <h3 class="experience-card-details-title">LYXOR Asset Management</h3>
-          <p>As a Data Engineer/Analyst at LYXOR Asset Management, responsibilities included:</p>
+          <p>As a Data Engineer at LYXOR Asset Management, responsibilities included:</p>
           <ul>
             <li>Creating and supporting solutions for large volumes of data.</li>
             <li>Building and monitoring ESG indicators of Lyxor ETFs such as the carbon footprint.</li>
@@ -167,7 +167,7 @@
       <div class="experience-card" appFade="up" [delay]="400">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Python Developer Intern</h3>
-          <span class="experience-card-info-date">CEA | Location</span>
+          <span class="experience-card-info-date">CEA | Paris</span>
           <span class="experience-card-info-date">May 2018 - August 2018</span>
           <div>
             <span class="experience-card-info-badge">Internship</span>
