--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -124,7 +124,7 @@
       <div class="experience-card" appFade="up" [delay]="300">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer/Analyst</h3>
-          <span class="experience-card-info-date">LYXOR Asset Management | Paris/span>
+          <span class="experience-card-info-date">LYXOR Asset Management | Paris</span>
           <span class="experience-card-info-date">September 2019 - June 2021</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
