--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -145,7 +145,7 @@
       <div class="experience-card" appFade="up" [delay]="350">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Scientist Apprentice</h3>
-          <span class="experience-card-info-date">Enedis | Location</span>
+          <span class="experience-card-info-date">Enedis | Lyon</span>
           <span class="experience-card-info-date">September 2018 - August 2019</span>
           <div>
             <span class="experience-card-info-badge">Apprenticeship</span>
